huashan: enable camera key
This will allow camera key to wake/unlock/control music
(and probably something else in the future).

Change-Id: I161a427cdfab2d1462fa83cb4aaf2f0d1a6e5664

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -198,9 +198,10 @@
              4 - Menu
              8 - Assistant (search)
             16 - App switch
+            32 - Camera
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">0</integer>
+    <integer name="config_deviceHardwareKeys">32</integer>
 
     <!-- Base "touch slop" value used by ViewConfiguration as a
          movement threshold where scrolling should begin. -->
@@ -259,6 +260,5 @@
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
     <string name="config_datause_iface" translatable="false">rmnet0</string>
-
 
 </resources>
