--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -261,4 +261,6 @@
 
     <string name="config_datause_iface" translatable="false">rmnet0</string>
 
+    <!-- LED Flashlight -->
+    <bool name="config_enableTorch">true</bool>
 </resources>
