huashan: initial kitkat (4.4) bringup
Change-Id: I7919e790f52e4e13df70e4f1541095b337936ae2

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -263,4 +263,7 @@
 
     <!-- LED Flashlight -->
     <bool name="config_enableTorch">true</bool>
+
+    <!-- Disable lockscreen translucent decor by default -->
+    <bool name="config_enableLockScreenTranslucentDecor">true</bool>
 </resources>
