--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -316,8 +316,8 @@
             16 - App switch
             32 - Camera
          For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-    <integer name="config_deviceHardwareKeys">32</integer>
+         config to 7. 
+    <integer name="config_deviceHardwareKeys">32</integer>-->
 
     <!-- Defines the system property to set for performance profile xe: sys.cpu.modes. Leave it
          blank if the device do not support performance profiles -->
@@ -328,5 +328,11 @@
          for "perf_profile_values" array. Leave it blank if the device do not support
          performance profiles  -->
     <string name="config_perf_profile_default_entry" translatable="false">1</string>
+    
+     <!-- Maximum number of supported users -->
+	<integer name="config_multiuserMaximumUsers">4</integer>
+	
+	<!-- Whether Multiuser UI should be shown -->
+	<bool name="config_enableMultiUserUI">true</bool>
 
 </resources>
