--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -42,6 +42,7 @@
         <item>mobile_cbs,12,0,2,60000,true</item>
         <item>wifi_p2p,13,1,0,-1,true</item>
         <item>bluetooth,7,7,2,-1,true</item>
+        <item>mobile_emergency,15,0,2,-1,true</item>
     </string-array>
 
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
