--- a/overlay/packages/services/Telecomm/res/values/config.xml
+++ b/overlay/packages/services/Telecomm/res/values/config.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
-
+<!-- Copyright (C) 2014 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,8 +11,9 @@
      limitations under the License.
 -->
 
+<!-- Telecomm resources that may need to be customized
+     for different hardware or product builds. -->
 <resources>
-    <!-- This is used to determine whether to hide the
-         preferred application install location settings-->
-    <bool name="config_hide_app_install_location" translatable="false">true</bool>
+    <!-- Flag indicating if the tty is enabled -->
+    <bool name="tty_enabled">true</bool>
 </resources>
