huashan: Disable buttons backlight from Settings
 * Required for AOSP based to hide the useless keys backlight choice

Change-Id: Ie719df257abe4a55130c584d76614047dea3846b

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -264,6 +264,9 @@
          config to 7. -->
     <integer name="config_deviceHardwareWakeKeys">96</integer>
 
+    <!-- Disable buttons backlight configurations -->
+    <integer name="config_buttonBrightnessSettingDefault">0</integer>
+
     <!-- Boolean indicating if restoring network selection should be skipped -->
     <!-- The restoring is handled by modem if it is true -->
     <bool translatable="false" name="skip_restoring_network_selection">true</bool>
