huashan: Show battery fully charged notification
 * Enables usage from changes of commit :
    I9214c880705c58b67b422fbf3977913e93a0a737

Change-Id: Ifa4dc0c42ef48cc204fbeac6a2841322172ca60a

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -309,4 +309,7 @@
          (range of 18 - 21 kHz). -->
     <bool name="config_supportSpeakerNearUltrasound">false</bool>
 
+    <!-- Show battery fully charged notification -->
+    <bool name="config_showBatteryFullyChargedNotification">true</bool>
+
 </resources>
